# agent-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
py/: hf_local.py
src/: autogen_local.py  doclm.py  hf_local.py
src/util/: wikidata_connector.py
