[tool.poetry]
name = "agent-builder"
version = "0.1.0"
description = "Build your own agent in one click."
authors = ["Morus <hleepersonal1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"